# medium-articles

general-data-science/similarities-measures/: pyproject.toml  similarity-measures.ipynb
natural-language-processing/embedding-models/: domain_adaption_fine_tune_nlp_model.ipynb  pyproject.toml  utils.py
natural-language-processing/embedding-models/data/: training_data.csv
natural-language-processing/embedding-models/logs/fit/20230630-152712/validation/: events.out.tfevents.1688153249.Shashanks-MacBook-Pro-2.local.44453.1.v2
natural-language-processing/text-processing/: Building Blocks Text Pre-Processing.ipynb  pyproject.toml
natural-language-processing/topic-modeling/: Evaluate Topic Models.ipynb  Introduction to Topic Modeling.ipynb  pyproject.toml
natural-language-processing/topic-modeling/results/: lda_tuning_results.csv  ldavis_prepared_10  ldavis_prepared_10.html  ldavis_tuned_8  ldavis_tuned_8.html
natural-language-processing/transformers-series/: pyproject.toml  sentiment_analysis_bert.ipynb
natural_language_processing/topic_modeling/: requirements.txt
natural_language_processing/topic_modeling/notebooks/: Evaluate Topic Models.ipynb  Introduction to Topic Modeling.ipynb
natural_language_processing/topic_modeling/results/: ldavis_prepared_10  ldavis_prepared_10.html  ldavis_tuned_8  ldavis_tuned_8.html
nlp/: Building Blocks Text Pre-Processing.ipynb  Introduction to Topic Modeling.ipynb  Preparing data language modeling.ipynb  phrase_modeling.ipynb
nlp/published_notebooks/: Building Blocks Text Pre-Processing.ipynb  Evaluate Topic Models.ipynb  Introduction to Topic Modeling.ipynb
recommender/published_notebooks/: recommendation_python_lightfm.ipynb
recommender/results/: profiler_books_metadata_1.html  profiler_books_metadata_2.html  profiler_interactions.html
