[tool.poetry]
name = "topic-modeling"
version = "0.1.0"
description = ""
authors = ["Shashank Kapadia <shashank.kapadia@randstadusa.com>"]
readme = "README.md"
packages = [{include = "topic_modeling"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
jupyterlab = "^3.5.2"
pandas = "^1.5.2"
gensim = "^4.3.0"
nltk = "^3.8"
spacy = "^3.4.4"
tqdm = "^4.64.1"
pyldavis = "^3.3.1"
wordcloud = "^1.8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
