[tool.poetry]
name = "transformers-models"
version = "0.1.0"
description = ""
authors = ["Shashank Kapadia <smhkapadia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
jupyterlab = "^4.0.2"
tensorflow = [
    { version = "2.10.0", platform = "linux" },
]
tensorflow-macos = [
    { version = "2.10.0", platform = "darwin" },
]
pandas = "^2.0.3"
seaborn = "^0.12.2"
transformers = "4.30.0"
torch = "^2.0.1"
scikit-learn = "^1.3.0"
datasets = "^2.13.1"
accelerate = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
